--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ dependencies:
   flutter:
     sdk: flutter
   bidirectional_scroll_view: "^0.0.5"
+  side_header_list_view: "^0.0.3"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
