--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ dependencies:
   bidirectional_scroll_view: "^0.0.5"
   side_header_list_view: "^0.0.3"
   flutter_local_notifications: "^0.2.9"
+  android_intent: "^0.2.1"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
