--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
   side_header_list_view: "^0.0.3"
   flutter_local_notifications: "^0.2.9"
   android_intent: "^0.2.1"
+  intl: "^0.15.6"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
